--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jpr Cursus</title>
 </head>
 <body>
-    <p>eerste tekst</p>
-    <p>tweede tekst</p>
+    <Header>
+        <h1>Conservatorium Mechelen</h1>
+        <nav>
+            <ul>
+                <li><a href="Main index/eartraining/index.html">Ear Training</a></li>
+                <li><a href="Main index/Blues Training/index.html">Blues Training</a></li>
+                <li><a href="Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
+            </ul>
+        </nav>
+
+    </Header>
+    <main>
+        <p>
+            Tell me and i forgot.
+        </p>
+        <p>
+            Teach me and i may remember.
+        </p>
+        <p>
+            Involve me and i learn.
+        </p>
+        <p>
+            (Benjamin Franklin)
+        </p>
+    </main>
+
 </body>
 </html>
