--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jpr Cursus</title>
+    <link rel="stylesheet body" href="css/Body.css">
+    <link rel="stylesheet header" href="css/Header.css">
 </head>
 <body>
     <Header>
