--- a/Main index/eartraining/index.html
+++ b/Main index/eartraining/index.html
@@ -4,18 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ear Training</title>
-    <link rel="stylesheet body" href="css/Body.css">
-    <link rel="stylesheet header" href="css/Header.css">
+    <link rel="stylesheet body" href="/css/Body.css">
+    <link rel="stylesheet header" href="/css/Header.css">
 </head>
 <body>
-    <header>
-        <h1>Ear Training</h1>
-    </header>
-    <main>
-        <h2>Sing The Numbers</h2>
+    <Header>
+        <h1>Conservatorium Mechelen</h1>
         <nav>
             <ul>
-                <li></li>
+                <li><a href="/Main index/eartraining/index.html">Ear Training</a></li>
+                <li><a href="Main index/Blues Training/index.html">Blues Training</a></li>
+                <li><a href="Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
+            </ul>
+        </nav>
+    </Header>
+    <main>
+        <h2>Ear Training</h2>
+        <h3>Sing The Numbers</h3>
+        <nav>
+            <ul>
+                <li><a href="Tonal map/index.html"> Tonal map</a></li>
                 <li></li>
                 <li></li>
             </ul>
