--- a/Main index/eartraining/Seven Worlds/index.html
+++ b/Main index/eartraining/Seven Worlds/index.html
@@ -3,11 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet body" href="css/Body.css">
-    <link rel="stylesheet header" href="css/Header.css">
+    <title>Seven Worlds Index</title>
+    <link rel="stylesheet body" href="/css/Body.css">
+    <link rel="stylesheet header" href="/css/Header.css">
 </head>
 <body>
-    
+    <Header>
+        <h1>Conservatorium Mechelen</h1>
+        <nav>
+            <ul>
+                <li><a href="Main index/eartraining/index.html">Ear Training</a></li>
+                <li><a href="Main index/Blues Training/index.html">Blues Training</a></li>
+                <li><a href="Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
+            </ul>
+        </nav>
+    </Header>
+    <main>
+        <H2>Sing The Numbers</H2>
+        <p>Seven Worlds</p>
+        <ul>
+            <li><a href="De Eerste Harmonische Omgeving (Ionisch).html">De Eerste Harmonische Omgeving: Ionisch
+            </a></li>
+            <li><a href="module 2.html">Module 2</a></li>
+            <li>
+                <a href="module 3.html">Module 3</a>
+            </li>
+            <li>
+                <a href="module 4.html">Module 4</a>
+            </li>
+            <Li>
+                <a href="module 5.html">Module 5</a>
+            </Li>
+        </ul>
+    </main>
 </body>
 </html>
