--- a/Main index/eartraining/Tonal map/module 2.html
+++ b/Main index/eartraining/Tonal map/module 2.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eartraining Module 2</title>
-    <link ref="stylesheet" href="/css/Body.css">
+    <title>Tonal Map Module 1</title>
     <link rel="stylesheet" href="/css/Header.css">
+    <link rel="stylesheet" href="/css/Body.css">
+
 </head>
 <body>
     <Header>
@@ -20,23 +21,23 @@
 
     </Header>
     <main>
-    <h2>Module 2</h2>
-    <p>
-        Les 6.  We zingen nu de noten 1, 3 en 5 
-    </p>
-    <audio controls src="Audio/Module 2/IFR_Stn1_6.mp3"></audio>
-    <p>
-        Les 7. We zingen nu de noten 1, 4 en 5  
-    </p>
-    <audio controls src="Audio/Module 2/IFR_Stn1_l7.mp3"></audio>
-    <p>
-        Les 8. We zingen nu de noten 1, 3, 4 en 5 
-    </p>
-    <audio controls src="Audio/Module 2/IFR_Stn1_8.mp3"></audio>
-    <p>
-        Les 9. We zingen nu de noten 1,2,3, 4 en 5   
-    </p>
-    <audio controls src="Audio/Module 2/IFR_Stn1_9.mp3"></audio>
+        <h2>Module 1</h2>
+        <p>
+            Les 6.  We zingen nu de noten 1, 3 en 5 
+        </p>
+        <audio controls src="Audio/Module 2/IFR_Stn1_6.mp3"></audio>
+        <p>
+            Les 7. We zingen nu de noten 1, 4 en 5  
+        </p>
+        <audio controls src="Audio/Module 2/IFR_Stn1_l7.mp3"></audio>
+        <p>
+            Les 8. We zingen nu de noten 1, 3, 4 en 5 
+        </p>
+        <audio controls src="Audio/Module 2/IFR_Stn1_8.mp3"></audio>
+        <p>
+            Les 9. We zingen nu de noten 1,2,3, 4 en 5  
+        </p>
+        <audio controls src="Audio/Module 2/IFR_Stn1_9.mp3"></audio>
     </main>
 </body>
 </html>
