--- a/Main index/eartraining/Tonal map/index.html
+++ b/Main index/eartraining/Tonal map/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet body" href="css/Body.css">
+    <title>Tonal Map Index</title>
+    <link rel="stylesheet body" href="/css/Body.css">
     <link rel="stylesheet header" href="/css/Header.css">
 </head>
 <body>
@@ -19,10 +19,21 @@
         </nav>
     </Header>
     <main>
+        <H2>Sing The Numbers</H2>
+        <p>Tonal Map</p>
         <ul>
-            <li><a href="module 1.html">mudole 1</a></li>
+            <li><a href="module 1.html">Module 1</a></li>
+            <li><a href="module 2.html">Module 2</a></li>
+            <li>
+                <a href="module 3.html">Module 3</a>
+            </li>
+            <li>
+                <a href="module 4.html">Module 4</a>
+            </li>
+            <Li>
+                <a href="module 5.html">Module 5</a>
+            </Li>
         </ul>
-
     </main>
 </body>
 </html>
