--- a/Main index/eartraining/index.html
+++ b/Main index/eartraining/index.html
@@ -12,9 +12,9 @@
         <h1>Conservatorium Mechelen</h1>
         <nav>
             <ul>
-                <li><a href="/Main index/eartraining/index.html">Ear Training</a></li>
-                <li><a href="Main index/Blues Training/index.html">Blues Training</a></li>
-                <li><a href="Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
+                <li><a href="index.html">Ear Training</a></li>
+                <li><a href="/Main index/Blues Training/index.html">Blues Training</a></li>
+                <li><a href="/Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
             </ul>
         </nav>
     </Header>
@@ -24,7 +24,9 @@
         <nav>
             <ul>
                 <li><a href="Tonal map/index.html"> Tonal map</a></li>
-                <li></li>
+                <li>
+                    <a href="Seven Worlds/index.html">Seven Worlds</a>
+                </li>
                 <li></li>
             </ul>
         </nav>
