--- a/Main index/eartraining/Seven Worlds/index.html
+++ b/Main index/eartraining/Seven Worlds/index.html
@@ -24,15 +24,20 @@
         <ul>
             <li><a href="De Eerste Harmonische Omgeving (Ionisch).html">De Eerste Harmonische Omgeving: Ionisch
             </a></li>
-            <li><a href="module 2.html">Module 2</a></li>
             <li>
-                <a href="module 3.html">Module 3</a>
+                <a href="De Tweede Harmonische Omgeving (Dorisch).html">De Tweede Harmonische Omgeving (Dorisch)
+                </a>
+            </li>
+
+            <li>
+                <a href="De Derde Harmonische Omgeving: Phrygisch.html">De Derde Harmonische Omgeving: Phrygisch</a>
             </li>
             <li>
-                <a href="module 4.html">Module 4</a>
+                <a href="De Vierde Harmonische Omgeving: Lydisch.html">De Vierde Harmonische Omgeving: Lydisch</a>
             </li>
             <Li>
-                <a href="module 5.html">Module 5</a>
+                <a href="De Vijfde Harmonische Omgeving: Mixolydisch.html">De Vijfde Harmonische Omgeving: Mixolydisch
+                </a>
             </Li>
         </ul>
     </main>
