--- a/Main index/eartraining/Tonal map/module 3.html
+++ b/Main index/eartraining/Tonal map/module 3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eartraining Modele 3</title>
+    <title>Tonal Modele 3</title>
     <link rel="stylesheet" href="/css/Header.css">
     <link rel="stylesheet" href="/css/Body.css">
 
