--- a/Main index/eartraining/Melody Paths/index.html
+++ b/Main index/eartraining/Melody Paths/index.html
@@ -3,23 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Melody Path</title>
     <link rel="stylesheet body" href="css/Body.css">
     <link rel="stylesheet header" href="css/Header.css">
 </head>
 <body>
     <Header>
-        <h1>Sing The numbers</h1>
-    </Header>
-    <main>
-        <h2>Melody Paths</h2>
+        <h1>Conservatorium Mechelen</h1>
         <nav>
             <ul>
-                <li>lessen 1 t.e.m. 4</li>
-                <li>lessen 5 t.e.m. 8</li>
-                <li>lessen 9 t.e.m. 12</li>
-                <li>lessen 13 t.e.m. 16</li>
-                <li>lessen 17 t.e.m. 20</li>
+                <li><a href="Main index/eartraining/index.html">Ear Training</a></li>
+                <li><a href="Main index/Blues Training/index.html">Blues Training</a></li>
+                <li><a href="Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
+            </ul>
+        </nav>
+    </Header>
+    <main>
+        <h2>Sing The numbers</h2>
+        <p>Melody Paths</p>
+        <nav>
+            <ul>
+                <li>
+                    <a href="Lessen 1 tem 4.html">lessen 1 t.e.m. 4</a>
+                </li>
+                <li>
+                    <a href="Lessen 5 tem 8.html">lessen 5 t.e.m. 8</a>
+                </li>
+                <li>
+                    <a href="Lessen 9 tem 12.html">lessen 9 t.e.m. 12</a>
+                </li>
+                <li>
+                    <a href="Lessen 13 tem 16.html">lessen 13 t.e.m. 16</a>
+                </li>
+                <li>
+                    <a href="Lessen 17 tem 20.html">lessen 17 t.e.m. 20</a>
+                </li>
             </ul>
         </nav>
         <p>Improvise For Real biedt meespeeltracks aan in alle toonaarden en verschilllnede muziekgenres</p>
