--- a/Main index/eartraining/Seven Worlds/De Vijfde Harmonische Omgeving: Mixolydisch.html
+++ b/Main index/eartraining/Seven Worlds/De Vijfde Harmonische Omgeving: Mixolydisch.html
@@ -23,26 +23,26 @@
     <main>
         <h2>De Vijfde Harmonische Omgeving: Mixolydisch</h2>
         <p>
-            Meditatief   ( 1 . 2 . 3 4 . 5 . 6 . 7)
+            Meditatief (5 . 6 . 7 1 . 2 . 3 4)
         </p>
-        <audio controls src="Audio/De Eerste Harmonische Omgeving (Ionisch)/ifr_Stn2_01.mp3"></audio>
+        <audio controls src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/ifr_Stn2_13.mp3"></audio>
         <p>
-            Akkoordnoten (1, 3, 5 en 7)  
+            Akkoordnoten (5 7 2 4)  
         </p>
-        <audio controls src="Audio/De Eerste Harmonische Omgeving (Ionisch)/ifr_Stn2_02.mp3"></audio>
+        <audio controls src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/ifr_Stn2_14.mp3"></audio>
         <p>
-            Gevorderd      ( 1 2 3 4 5 6 7)
+            Gevorderd 
         </p>
-        <audio controls src="Audio/De Eerste Harmonische Omgeving (Ionisch)/ifr_Stn2_03.mp3"></audio>
+        <audio controls src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/ifr_Stn2_15.mp3"></audio>
         <p>
             Backingtrack in C
 
         </p>
-        <audio controls src="Audio/De Eerste Harmonische Omgeving (Ionisch)/1st harmonic env, modern, key of C (note 1 = C).mp3"></audio>
+        <audio controls src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/5th harmonic env, modern, key of C (note 5 = G).mp3"></audio>
         <p>
             Backingtrack Jazz in C
         </p>
-        <audio controls src="Audio/De Eerste Harmonische Omgeving (Ionisch)/1st harmonic env, jazz, key of C (note 1 = C).mp3"></audio>
+        <audio controls src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/5th harmonic env, jazz, key of C (note 5 = G).mp3"></audio>
     </main>
 </body>
 </html>
