--- a/Main index/eartraining/Seven Worlds/index.html
+++ b/Main index/eartraining/Seven Worlds/index.html
@@ -39,6 +39,14 @@
                 <a href="De Vijfde Harmonische Omgeving: Mixolydisch.html">De Vijfde Harmonische Omgeving: Mixolydisch
                 </a>
             </Li>
+            <li>
+                <a href="De Zesde Harmonische Omgeving: Aeolisch.html">De Zesde Harmonische Omgeving: Aeolisch
+                </a>
+            </li>
+            <li>
+                <a href="De Zevende Harmonische Omgeving: Locrisch.html">De Zevende Harmonische Omgeving: Locrisch
+                </a>
+            </li>
         </ul>
     </main>
 </body>
