--- a/Main index/Blues Training/index.html
+++ b/Main index/Blues Training/index.html
@@ -4,12 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet body" href="css/Body.css">
-    <link rel="stylesheet header" href="css/Header.css">
+    <link rel="stylesheet body" href="/css/Body.css">
+    <link rel="stylesheet header" href="/css/Header.css">
 </head>
 <body>
-    <header>
-        <H1>Tis goed weer vandaag</H1>
-    </header>
+    <Header>
+        <h1>Conservatorium Mechelen</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Ear Training</a></li>
+                <li><a href="/Main index/Blues Training/index.html">Blues Training</a></li>
+                <li><a href="/Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
+            </ul>
+        </nav>
+    </Header>
+    <main>
+        <h2>Blues Training</h2>
+        <h3>Blues:stap voor stap</h3>
+        <nav>
+            <ul>
+                <li>
+                    <a href="lessen 1 tem 4.html">Lessen 1 t.e.m. 4
+                    </a>
+                </li>
+                <li>
+                    <a href="lessen 5 tem 8.html">Lessen 5 t.e.m. 8
+                    </a>
+                </li>
+                <li>
+                    <a href="Lessen 9 tem 13.html">Lessen 9 t.e.m. 13
+                    </a>
+                </li>
+                <li>
+                    <a href="Lessen 14 tem 18.html">Lessen 14 t.e.m. 18
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <p>
+            De meespeeltracks staan in C. Improvise For Real biedt voor elke oefening tracks aan in alle toonaarden.
+
+        </p>
+    </main>
 </body>
 </html>
