--- a/Main index/eartraining/index.html
+++ b/Main index/eartraining/index.html
@@ -27,7 +27,9 @@
                 <li>
                     <a href="Seven Worlds/index.html">Seven Worlds</a>
                 </li>
-                <li></li>
+                <li>
+                    <a href="Melody Paths/index.html">Melody Paths</a>
+                </li>
             </ul>
         </nav>
     </main>
