--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="Main index/eartraining/index.html">Ear Training</a></li>
                 <li><a href="Main index/Blues Training/index.html">Blues Training</a></li>
-                <li><a href="Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
+                <li><a href="https://integerbook.herokuapp.com">Leadsheets IRF</a></li>
             </ul>
         </nav>
 
