--- a/Main index/eartraining/Tonal map/module 1.html
+++ b/Main index/eartraining/Tonal map/module 1.html
@@ -25,7 +25,7 @@
         <p>
             Les 1. Beheers de noten 1, 2, 3: zing de eerste 3 noten na van de tonale kaart. 
         </p>
-        <audio controls src="Audio/Module 1/IFR_Stn_1_1.mp3"></audio>
+        <audio download=disabled controls src="Audio/Module 1/IFR_Stn_1_1.mp3"></audio>
         <p>
             Les 2. Beheers de noten 1, 2, 3: nu maken we een melodische verbinding. Beginner
 
