--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <Header>
         <h1>Conservatorium Mechelen</h1>
+        <h2>Cursus Jazz Pop Rock</h2>
         <nav>
             <ul>
                 <li><a href="Main index/eartraining/index.html">Ear Training</a></li>
