--- a/Main index/eartraining/Tonal map/module 1.html
+++ b/Main index/eartraining/Tonal map/module 1.html
@@ -30,7 +30,7 @@
             Les 2. Beheers de noten 1, 2, 3: nu maken we een melodische verbinding. Beginner
 
         </p>
-        <audio controls src="Audio/Module 1/IFR_Stn1_2.mp3"></audio>
+        <audio download="disabled" controls src="Audio/Module 1/IFR_Stn1_2.mp3"></audio>
         <p>
             Les 3. Beheers de noten 1, 2, 3: we maken  een melodische verbinding. Gevorderd
         </p>
