--- a/Main index/eartraining/Tonal map/module 1.html
+++ b/Main index/eartraining/Tonal map/module 1.html
@@ -34,7 +34,7 @@
         <p>
             Les 3. Beheers de noten 1, 2, 3: we maken  een melodische verbinding. Gevorderd
         </p>
-        <audio controls src="Audio/Module 1/IFR_Stn1_3.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Module 1/IFR_Stn1_3.mp3"></audio>
         <p>
             Les 4. Beheers de noten 1, 3, 4: we maken een melodische verbinding.
         </p>
