--- a/Main index/Blues Training/Lessen 9 tem 13.html
+++ b/Main index/Blues Training/Lessen 9 tem 13.html
@@ -25,23 +25,23 @@
         <p>
             Les 9: Akkoordenstudie 6- en 2-
         </p>
-        <audio controls src="Audio/lessen 9 tem 13/IFR_Blues_Mastery_Course_lesson_09_key_of_C.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/lessen 9 tem 13/IFR_Blues_Mastery_Course_lesson_09_key_of_C.mp3"></audio>
         <p>
             Les 10: Mineur Blues
         </p>
-        <audio controls src="Audio/lessen 9 tem 13/IFR_Blues_Mastery_Course_lesson_10_key_of_C.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/lessen 9 tem 13/IFR_Blues_Mastery_Course_lesson_10_key_of_C.mp3"></audio>
         <p>
             Les 11: Akkoordenstudie 3-, 2- en 6-
         </p>
-        <audio controls src="Audio/lessen 9 tem 13/IFR_Blues_Mastery_Course_lesson_11_key_of_C.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/lessen 9 tem 13/IFR_Blues_Mastery_Course_lesson_11_key_of_C.mp3"></audio>
         <p> 
             Les 12: Mineur Blues met 3-, 2-, 6- cadens
         </p>
-        <audio controls src="Audio/lessen 9 tem 13/IFR_Blues_Mastery_Course_lesson_12_key_of_C.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/lessen 9 tem 13/IFR_Blues_Mastery_Course_lesson_12_key_of_C.mp3"></audio>
         <p>
             Les 13: Latin Mineur Blues
         </p>
-        <audio controls src="Audio/lessen 9 tem 13/IFR_Blues_Mastery_Course_lesson_13_key_of_C.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/lessen 9 tem 13/IFR_Blues_Mastery_Course_lesson_13_key_of_C.mp3"></audio>
     
     </main>
 </body>
