--- a/Main index/Blues Training/lessen 5 tem 8.html
+++ b/Main index/Blues Training/lessen 5 tem 8.html
@@ -25,19 +25,19 @@
         <p>
             Les 5: Akkoordenstudie 5D, 4D en 1D
         </p>
-        <audio controls src="Audio/Lessen 5 tem 8/IFR_Blues_Mastery_Course_lesson_05_key_of_C.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 5 tem 8/IFR_Blues_Mastery_Course_lesson_05_key_of_C.mp3"></audio>
         <p>
             Les 6: New Orleans Blues
         </p>
-        <audio controls src="Audio/Lessen 5 tem 8/IFR_Blues_Mastery_Course_lesson_06_key_of_C.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 5 tem 8/IFR_Blues_Mastery_Course_lesson_06_key_of_C.mp3"></audio>
         <p>
             Les 7: Akkoordenstudie 1D, 4D, 1D, 5D
         </p>
-        <audio controls src="Audio/Lessen 5 tem 8/IFR_Blues_Mastery_Course_lesson_07_key_of_C.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 5 tem 8/IFR_Blues_Mastery_Course_lesson_07_key_of_C.mp3"></audio>
         <p> 
             Les 8: Spanning en Chromatiek in Blues
         </p>
-        <audio controls src="Audio/Lessen 5 tem 8/IFR_Blues_Mastery_Course_lesson_08_key_of_C.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 5 tem 8/IFR_Blues_Mastery_Course_lesson_08_key_of_C.mp3"></audio>
     
     </main>
 </body>
