--- a/Main index/eartraining/Melody Paths/Lessen 1 tem 4.html
+++ b/Main index/eartraining/Melody Paths/Lessen 1 tem 4.html
@@ -25,27 +25,27 @@
         <p>
             Les 1: Akkoorden 1 en 4 eenvoudig
         </p>
-        <audio controls src="Audio/Lessen 1 tem 4/IFR Sing the Numbers 3 - lesson 01 - chords 1, 4.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 1 tem 4/IFR Sing the Numbers 3 - lesson 01 - chords 1, 4.mp3"></audio>
         <p>
             Les 2: Akkoorden 1 en 4 gevorderd
         </p>
-        <audio controls src="Audio/Lessen 1 tem 4/IFR Sing the Numbers 3 - lesson 02 - chords 1, 4.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 1 tem 4/IFR Sing the Numbers 3 - lesson 02 - chords 1, 4.mp3"></audio>
         <p>
             Les 3: Akkoorden 1 en 5D eenvoudig
         </p>
-        <audio controls src="Audio/Lessen 1 tem 4/IFR Sing the Numbers 3 - lesson 03 - chords 1, 5D.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 1 tem 4/IFR Sing the Numbers 3 - lesson 03 - chords 1, 5D.mp3"></audio>
         <p>
             Les 4: Akkoorden 1 en 5D gevorderd
         </p>
-        <audio controls src="Audio/Lessen 1 tem 4/IFR Sing the Numbers 3 - lesson 04 - chords 1, 5D.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 1 tem 4/IFR Sing the Numbers 3 - lesson 04 - chords 1, 5D.mp3"></audio>
         <p>
             Backingtrack 1 en 4
         </p>
-        <audio controls src="Audio/Lessen 1 tem 4/track 01 - chords 1 and 4, campfire guitars (key of C).mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 1 tem 4/track 01 - chords 1 and 4, campfire guitars (key of C).mp3"></audio>
         <p>
             Backingtrack 1 en 5D
         </p>
-        <audio controls src="Audio/Lessen 1 tem 4/track 03 - chords 1 and 5D, country song (key of C).mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 1 tem 4/track 03 - chords 1 and 5D, country song (key of C).mp3"></audio>
     </main>
 </body>
 </html>
