--- a/Main index/eartraining/Melody Paths/Lessen 9 tem 12.html
+++ b/Main index/eartraining/Melody Paths/Lessen 9 tem 12.html
@@ -25,19 +25,19 @@
         <p>
             Les 9: Akkoorden 6- en 5D
         </p>
-        <audio controls src="Audio/lessen 9 tem 12/IFR Sing the Numbers 3 - lesson 09 - chords 6-, 5D.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/lessen 9 tem 12/IFR Sing the Numbers 3 - lesson 09 - chords 6-, 5D.mp3"></audio>
         <p>
             Les 10: Akkoorden 6-, 4, 1 en 5D
         </p>
-        <audio controls src="Audio/lessen 9 tem 12/IFR Sing the Numbers 3 - lesson 10 - chords 6-, 4, 1, 5D.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/lessen 9 tem 12/IFR Sing the Numbers 3 - lesson 10 - chords 6-, 4, 1, 5D.mp3"></audio>
         <p>
             Les 11: Akkoorden 2- en 5D
         </p>
-        <audio controls src="Audio/lessen 9 tem 12/IFR Sing the Numbers 3 - lesson 11 - chords 2-, 5D.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/lessen 9 tem 12/IFR Sing the Numbers 3 - lesson 11 - chords 2-, 5D.mp3"></audio>
         <p>
             Les 12: Akkoorden 2-, 5D en 1
         </p>
-        <audio controls src="Audio/lessen 9 tem 12/IFR Sing the Numbers 3 - lesson 12 - chords 2-, 5D, 1.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/lessen 9 tem 12/IFR Sing the Numbers 3 - lesson 12 - chords 2-, 5D, 1.mp3"></audio>
         
     </main>
 </body>
