--- a/Main index/eartraining/Seven Worlds/De Derde Harmonische Omgeving: Phrygisch.html
+++ b/Main index/eartraining/Seven Worlds/De Derde Harmonische Omgeving: Phrygisch.html
@@ -25,24 +25,24 @@
         <p>
             Meditatief ( 3 4 . 5 . 6 . 7 1 . 2 .)
         </p>
-        <audio controls src="Audio/De Derde Harmonische Omgeving: Phrygisch/ifr_Stn2_07.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Derde Harmonische Omgeving: Phrygisch/ifr_Stn2_07.mp3"></audio>
         <p>
             Akkoordnoten (3 5 7 2) deze track is de zeldfe als de vorige????? moet dit niet track 02_08 zijn
         </p>
-        <audio controls src="Audio/De Derde Harmonische Omgeving: Phrygisch/ifr_Stn2_07.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Derde Harmonische Omgeving: Phrygisch/ifr_Stn2_07.mp3"></audio>
         <p>
             Gevorderd
         </p>
-        <audio controls src="Audio/De Derde Harmonische Omgeving: Phrygisch/ifr_Stn2_09.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Derde Harmonische Omgeving: Phrygisch/ifr_Stn2_09.mp3"></audio>
         <p>
             Backingtrack in C
 
         </p>
-        <audio controls src="Audio/De Derde Harmonische Omgeving: Phrygisch/3rd harmonic env, modern, key of C (note 3 = E).mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Derde Harmonische Omgeving: Phrygisch/3rd harmonic env, modern, key of C (note 3 = E).mp3"></audio>
         <p>
             Backingtrack Jazz in C
         </p>
-        <audio controls src="Audio/De Derde Harmonische Omgeving: Phrygisch/3rd harmonic env, jazz, key of C (note 3 = E).mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Derde Harmonische Omgeving: Phrygisch/3rd harmonic env, jazz, key of C (note 3 = E).mp3"></audio>
     </main>
 </body>
 </html>
