--- a/Main index/eartraining/Seven Worlds/De Tweede Harmonische Omgeving (Dorisch).html
+++ b/Main index/eartraining/Seven Worlds/De Tweede Harmonische Omgeving (Dorisch).html
@@ -25,24 +25,24 @@
         <p>
             Meditatief  (2 . 3 4 . 5 . 6 . 7 1)
         </p>
-        <audio controls src="Audio/De Tweede Harmonische Omgeving (Dorisch)/IFR_Stn2_04_2nd_meditative.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Tweede Harmonische Omgeving (Dorisch)/IFR_Stn2_04_2nd_meditative.mp3"></audio>
         <p>
             Akkordnoten (2 4 6 1)
         </p>
-        <audio controls src="Audio/De Tweede Harmonische Omgeving (Dorisch)/IFR_Stn2_05_2nd_chord_notes.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Tweede Harmonische Omgeving (Dorisch)/IFR_Stn2_05_2nd_chord_notes.mp3"></audio>
         <p>
             Gevorderd 
         </p>
-        <audio controls src="Audio/De Tweede Harmonische Omgeving (Dorisch)/IFR_Stn2_06_2nd_advanced.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Tweede Harmonische Omgeving (Dorisch)/IFR_Stn2_06_2nd_advanced.mp3"></audio>
         <p>
             Backingtrack in C
 
         </p>
-        <audio controls src="Audio/De Tweede Harmonische Omgeving (Dorisch)/2nd harmonic env, modern, key of C (note 2 = D).mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Tweede Harmonische Omgeving (Dorisch)/2nd harmonic env, modern, key of C (note 2 = D).mp3"></audio>
         <p>
             Backingtrack Jazz in C
         </p>
-        <audio controls src="Audio/De Tweede Harmonische Omgeving (Dorisch)/2nd harmonic env, jazz, key of C (note 2 = D).mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Tweede Harmonische Omgeving (Dorisch)/2nd harmonic env, jazz, key of C (note 2 = D).mp3"></audio>
     </main>
 </body>
 </html>
