--- a/Main index/eartraining/Seven Worlds/De Vijfde Harmonische Omgeving: Mixolydisch.html
+++ b/Main index/eartraining/Seven Worlds/De Vijfde Harmonische Omgeving: Mixolydisch.html
@@ -25,24 +25,24 @@
         <p>
             Meditatief (5 . 6 . 7 1 . 2 . 3 4)
         </p>
-        <audio controls src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/ifr_Stn2_13.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/ifr_Stn2_13.mp3"></audio>
         <p>
             Akkoordnoten (5 7 2 4)  
         </p>
-        <audio controls src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/ifr_Stn2_14.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/ifr_Stn2_14.mp3"></audio>
         <p>
             Gevorderd 
         </p>
-        <audio controls src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/ifr_Stn2_15.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/ifr_Stn2_15.mp3"></audio>
         <p>
             Backingtrack in C
 
         </p>
-        <audio controls src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/5th harmonic env, modern, key of C (note 5 = G).mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/5th harmonic env, modern, key of C (note 5 = G).mp3"></audio>
         <p>
             Backingtrack Jazz in C
         </p>
-        <audio controls src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/5th harmonic env, jazz, key of C (note 5 = G).mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/5th harmonic env, jazz, key of C (note 5 = G).mp3"></audio>
     </main>
 </body>
 </html>
