--- a/Main index/eartraining/Tonal map/module 1.html
+++ b/Main index/eartraining/Tonal map/module 1.html
@@ -25,12 +25,12 @@
         <p>
             Les 1. Beheers de noten 1, 2, 3: zing de eerste 3 noten na van de tonale kaart. 
         </p>
-        <audio download=disabled controls src="Audio/Module 1/IFR_Stn_1_1.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Module 1/IFR_Stn_1_1.mp3"></audio>
         <p>
             Les 2. Beheers de noten 1, 2, 3: nu maken we een melodische verbinding. Beginner
 
         </p>
-        <audio download="disabled" controls src="Audio/Module 1/IFR_Stn1_2.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Module 1/IFR_Stn1_2.mp3"></audio>
         <p>
             Les 3. Beheers de noten 1, 2, 3: we maken  een melodische verbinding. Gevorderd
         </p>
@@ -38,11 +38,11 @@
         <p>
             Les 4. Beheers de noten 1, 3, 4: we maken een melodische verbinding.
         </p>
-        <audio controls src="Audio/Module 1/IFR_Stn1_4.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Module 1/IFR_Stn1_4.mp3"></audio>
         <p>
             Les 5. Beheers de noten 1, 2, 3 en 4: we  maken een melodische verbinding.
         </p>
-        <audio controls src="Audio/Module 1/IFR_Stn1_5.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Module 1/IFR_Stn1_5.mp3"></audio>
     </main>
 </body>
 </html>
