--- a/Main index/eartraining/Tonal map/module 4.html
+++ b/Main index/eartraining/Tonal map/module 4.html
@@ -25,23 +25,23 @@
         <p>
             Les 14. We zingen nu de noten 7, 1, 2 en 3 
         </p>
-        <audio controls src="Audio/Module 4/IFR_Stn1_14.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Module 4/IFR_Stn1_14.mp3"></audio>
         <p>
             Les 15. We zingen nu de noten 7, 1, 2, 3, 4  en 5
         </p>
-        <audio controls src="Audio/Module 4/IFR_Stn1_15.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Module 4/IFR_Stn1_15.mp3"></audio>
         <p>
             Les 16. We zingen nu de noten 5, 6, 7 en 1  
         </p>
-        <audio controls src="Audio/Module 4/IFR_Stn1_16.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Module 4/IFR_Stn1_16.mp3"></audio>
         <p>
             Les 17. We zingen nu de noten 5, 6, 7, 1, 2 en 3
         </p>
-        <audio controls src="Audio/Module 4/IFR_Stn1_17.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Module 4/IFR_Stn1_17.mp3"></audio>
         <p>
             Les 18. We zingen nu de noten 5, 6, 7, 1, 2  en 3 variatie
         </p>
-        <audio controls src="Audio/Module 4/IFR_Stn1_18.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Module 4/IFR_Stn1_18.mp3"></audio>
     </main>
 </body>
 </html>
