--- a/Main index/eartraining/Tonal map/module 5.html
+++ b/Main index/eartraining/Tonal map/module 5.html
@@ -25,19 +25,19 @@
         <p>
             Les 19. We zingen nu de noten  1, 2, 3, 4, 5, 6 en 7  
         </p>
-        <audio controls src="Audio/Module 5/IFR_Stn1_19.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Module 5/IFR_Stn1_19.mp3"></audio>
         <p>
             Les 20. We zingen nu de noten 1, 2, 3, 4, 5,  6, 7 en 1
         </p>
-        <audio controls src="Audio/Module 5/IFR_Stn1_20.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Module 5/IFR_Stn1_20.mp3"></audio>
         <p>
             Les 21. We zingen nu de noten 5, 6, 1, 2 en 3  
         </p>
-        <audio controls src="Audio/Module 5/IFR_Stn1_21.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Module 5/IFR_Stn1_21.mp3"></audio>
         <p>
             Les 22. We zingen nu de noten 5, 6, 7, 1, 2,  3, 4, 5, 6, 7 en 1
         </p>
-        <audio controls src="Audio/Module 5/IFR_Stn1_22.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Module 5/IFR_Stn1_22.mp3"></audio>
     </main>
 </body>
 </html>
