--- a/Main index/Blues Training/Lessen 14 tem 18.html
+++ b/Main index/Blues Training/Lessen 14 tem 18.html
@@ -25,23 +25,23 @@
         <p>
             Les 14: 8 maten Blues
         </p>
-        <audio controls src="Audio/Lessen 14 tem 18/IFR_Blues_Mastery_Course_lesson_14_key_of_C.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 14 tem 18/IFR_Blues_Mastery_Course_lesson_14_key_of_C.mp3"></audio>
         <p>
             Les 15: 16 maten Blues
         </p>
-        <audio controls src="Audio/Lessen 14 tem 18/IFR_Blues_Mastery_Course_lesson_15_key_of_C.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 14 tem 18/IFR_Blues_Mastery_Course_lesson_15_key_of_C.mp3"></audio>
         <p>
             Les 16: Trage Jazz Blues
         </p>
-        <audio controls src="Audio/Lessen 14 tem 18/IFR_Blues_Mastery_Course_lesson_16_key_of_C.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 14 tem 18/IFR_Blues_Mastery_Course_lesson_16_key_of_C.mp3"></audio>
         <p> 
             Les 17: Snelle Jazz Blues
         </p>
-        <audio controls src="Audio/Lessen 14 tem 18/IFR_Blues_Mastery_Course_lesson_17_key_of_C.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 14 tem 18/IFR_Blues_Mastery_Course_lesson_17_key_of_C.mp3"></audio>
         <p>
             Les 18: Mineur Jazz Blues
         </p>
-        <audio controls src="Audio/Lessen 14 tem 18/IFR_Blues_Mastery_Course_lesson_18_key_of_C.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 14 tem 18/IFR_Blues_Mastery_Course_lesson_18_key_of_C.mp3"></audio>
     
     </main>
 </body>
