--- a/Main index/Blues Training/lessen 1 tem 4.html
+++ b/Main index/Blues Training/lessen 1 tem 4.html
@@ -25,19 +25,19 @@
         <p>
             Les 1: Mozart’s Blues
         </p>
-        <audio controls src="Audio/lessen 1 tem 4/IFR_Blues_Mastery_Course_lesson_01_key_of_C.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/lessen 1 tem 4/IFR_Blues_Mastery_Course_lesson_01_key_of_C.mp3"></audio>
         <p>
             Les 2: Akkoordenstudie 1D en 4D
         </p>
-        <audio controls src="Audio/lessen 1 tem 4/IFR_Blues_Mastery_Course_lesson_02_key_of_C.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/lessen 1 tem 4/IFR_Blues_Mastery_Course_lesson_02_key_of_C.mp3"></audio>
         <p>
             Les 3: Chicago Blues
         </p>
-        <audio controls src="Audio/lessen 1 tem 4/IFR_Blues_Mastery_Course_lesson_03_key_of_C.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/lessen 1 tem 4/IFR_Blues_Mastery_Course_lesson_03_key_of_C.mp3"></audio>
         <p> 
             Les 4: 60’s R&B/ Funk Blues
         </p>
-        <audio controls src="Audio/lessen 1 tem 4/IFR_Blues_Mastery_Course_lesson_04_key_of_C.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/lessen 1 tem 4/IFR_Blues_Mastery_Course_lesson_04_key_of_C.mp3"></audio>
     
     </main>
 </body>
