--- a/Main index/eartraining/Melody Paths/Lessen 13 tem 16.html
+++ b/Main index/eartraining/Melody Paths/Lessen 13 tem 16.html
@@ -25,19 +25,19 @@
         <p>
             Les 13: Akkoorden 2- en 6-
         </p>
-        <audio controls src="Audio/Lessen 13 tem 16/IFR Sing the Numbers 3 - lesson 13 - chords 2-, 6-.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 13 tem 16/IFR Sing the Numbers 3 - lesson 13 - chords 2-, 6-.mp3"></audio>
         <p>
             Les 14: Akkoorden 1, 6-, 2-, en 5D
         </p>
-        <audio controls src="Audio/Lessen 13 tem 16/IFR Sing the Numbers 3 - lesson 14 - chords 1, 6-, 2-, 5D.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 13 tem 16/IFR Sing the Numbers 3 - lesson 14 - chords 1, 6-, 2-, 5D.mp3"></audio>
         <p>
             Les 15: Akkoorden 2- en 3-
         </p>
-        <audio controls src="Audio/Lessen 13 tem 16/IFR Sing the Numbers 3 - lesson 15 - chords 2-, 3-.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 13 tem 16/IFR Sing the Numbers 3 - lesson 15 - chords 2-, 3-.mp3"></audio>
         <p>
             Les 16: Akkoorden 6-, 2-, 3- en 6-
         </p>
-        <audio controls src="Audio/Lessen 13 tem 16/IFR Sing the Numbers 3 - lesson 16 - chords 6-, 2-, 3-, 6-.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 13 tem 16/IFR Sing the Numbers 3 - lesson 16 - chords 6-, 2-, 3-, 6-.mp3"></audio>
         
     </main>
 </body>
