--- a/Main index/eartraining/Melody Paths/Lessen 17 tem 20.html
+++ b/Main index/eartraining/Melody Paths/Lessen 17 tem 20.html
@@ -25,19 +25,19 @@
         <p>
             Les 17: Akkoorden 3- en 4
         </p>
-        <audio controls src="Audio/Lessen 17 tem 20/IFR Sing the Numbers 3 - lesson 17 - chords 3-, 4.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 17 tem 20/IFR Sing the Numbers 3 - lesson 17 - chords 3-, 4.mp3"></audio>
         <p>
             Les 18: Akkoorden 6-, 5D, 4 en 3-
         </p>
-        <audio controls src="Audio/Lessen 17 tem 20/IFR Sing the Numbers 3 - lesson 18 - chords 6-, 5D, 4, 3-.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 17 tem 20/IFR Sing the Numbers 3 - lesson 18 - chords 6-, 5D, 4, 3-.mp3"></audio>
         <p>
             Les 19: Akkoorden 1, 3-, 4 en 5D
         </p>
-        <audio controls src="Audio/Lessen 17 tem 20/IFR Sing the Numbers 3 - lesson 19 - chords 1, 3-, 4, 5D.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 17 tem 20/IFR Sing the Numbers 3 - lesson 19 - chords 1, 3-, 4, 5D.mp3"></audio>
         <p>
             Les 20: Akkoorden 6- en 7-b5
         </p>
-        <audio controls src="Audio/Lessen 17 tem 20/IFR Sing the Numbers 3 - lesson 20 - chords 6-, 7-b5.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 17 tem 20/IFR Sing the Numbers 3 - lesson 20 - chords 6-, 7-b5.mp3"></audio>
         
     </main>
 </body>
