--- a/Main index/eartraining/Melody Paths/Lessen 5 tem 8.html
+++ b/Main index/eartraining/Melody Paths/Lessen 5 tem 8.html
@@ -25,31 +25,31 @@
         <p>
             Les 5: Akkoorden 1, 4, 1 en 5D
         </p>
-        <audio controls src="Audio/Lessen 5 tem 8/IFR Sing the Numbers 3 - lesson 05 - chords 1, 4, 1, 5D.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 5 tem 8/IFR Sing the Numbers 3 - lesson 05 - chords 1, 4, 1, 5D.mp3"></audio>
         <p>
             Backingtrack in C
         </p>
-        <audio controls src="Audio/Lessen 5 tem 8/track 05 - chords 1, 4, 5D, 1, pop (key of C).mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 5 tem 8/track 05 - chords 1, 4, 5D, 1, pop (key of C).mp3"></audio>
         <p>
             Les 6: Akkoorden 4 en 5D
         </p>
-        <audio controls src="Audio/Lessen 5 tem 8/IFR Sing the Numbers 3 - lesson 06 - chords 4, 5D.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 5 tem 8/IFR Sing the Numbers 3 - lesson 06 - chords 4, 5D.mp3"></audio>
         <p>
             Les 7: Akkoorden 1 en 6-
         </p>
-        <audio controls src="Audio/Lessen 5 tem 8/IFR Sing the Numbers 3 - lesson 07 - chords 1, 6-.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 5 tem 8/IFR Sing the Numbers 3 - lesson 07 - chords 1, 6-.mp3"></audio>
         <p>
             Backingtrack in C
         </p>
-        <audio controls src="Audio/Lessen 5 tem 8/track 08 - chords 1, 6-, western rock (key of C).mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 5 tem 8/track 08 - chords 1, 6-, western rock (key of C).mp3"></audio>
         <p>
             Les 8: Akkoorden 6- en 4
         </p>
-        <audio controls src="Audio/Lessen 5 tem 8/IFR Sing the Numbers 3 - lesson 08 - chords 6-, 4.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 5 tem 8/IFR Sing the Numbers 3 - lesson 08 - chords 6-, 4.mp3"></audio>
         <p>
             Backingtrack in C
         </p>
-        <audio controls src="Audio/Lessen 5 tem 8/track 10 - chords 6-, 4, smooth jazz (key of C).mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Lessen 5 tem 8/track 10 - chords 6-, 4, smooth jazz (key of C).mp3"></audio>
     </main>
 </body>
 </html>
