--- a/Main index/eartraining/Seven Worlds/De Eerste Harmonische Omgeving (Ionisch).html
+++ b/Main index/eartraining/Seven Worlds/De Eerste Harmonische Omgeving (Ionisch).html
@@ -25,24 +25,24 @@
         <p>
             Meditatief   ( 1 . 2 . 3 4 . 5 . 6 . 7)
         </p>
-        <audio controls src="Audio/De Eerste Harmonische Omgeving (Ionisch)/ifr_Stn2_01.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Eerste Harmonische Omgeving (Ionisch)/ifr_Stn2_01.mp3"></audio>
         <p>
             Akkoordnoten (1, 3, 5 en 7)  
         </p>
-        <audio controls src="Audio/De Eerste Harmonische Omgeving (Ionisch)/ifr_Stn2_02.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Eerste Harmonische Omgeving (Ionisch)/ifr_Stn2_02.mp3"></audio>
         <p>
             Gevorderd      ( 1 2 3 4 5 6 7)
         </p>
-        <audio controls src="Audio/De Eerste Harmonische Omgeving (Ionisch)/ifr_Stn2_03.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Eerste Harmonische Omgeving (Ionisch)/ifr_Stn2_03.mp3"></audio>
         <p>
             Backingtrack in C
 
         </p>
-        <audio controls src="Audio/De Eerste Harmonische Omgeving (Ionisch)/1st harmonic env, modern, key of C (note 1 = C).mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Eerste Harmonische Omgeving (Ionisch)/1st harmonic env, modern, key of C (note 1 = C).mp3"></audio>
         <p>
             Backingtrack Jazz in C
         </p>
-        <audio controls src="Audio/De Eerste Harmonische Omgeving (Ionisch)/1st harmonic env, jazz, key of C (note 1 = C).mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Eerste Harmonische Omgeving (Ionisch)/1st harmonic env, jazz, key of C (note 1 = C).mp3"></audio>
     </main>
 </body>
 </html>
