--- a/Main index/eartraining/Seven Worlds/De Vierde Harmonische Omgeving: Lydisch.html
+++ b/Main index/eartraining/Seven Worlds/De Vierde Harmonische Omgeving: Lydisch.html
@@ -26,25 +26,25 @@
             Meditatief (4 . 5 . 6 . 7 1 . 2 . 3) 
 
         </p>
-        <audio controls src="Audio/De Vierde Harmonische Omgeving: Lydisch/ifr_Stn2_10.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Vierde Harmonische Omgeving: Lydisch/ifr_Stn2_10.mp3"></audio>
         <p>
             Akkoordnoten (4 6 1 3)    
 
         </p>
-        <audio controls src="Audio/De Vierde Harmonische Omgeving: Lydisch/ifr_Stn2_11.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Vierde Harmonische Omgeving: Lydisch/ifr_Stn2_11.mp3"></audio>
         <p>
             Gevorderd      ( 1 2 3 4 5 6 7)
         </p>
-        <audio controls src="Audio/De Vierde Harmonische Omgeving: Lydisch/ifr_Stn2_12.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Vierde Harmonische Omgeving: Lydisch/ifr_Stn2_12.mp3"></audio>
         <p>
             Backingtrack in C
 
         </p>
-        <audio controls src="Audio/De Vierde Harmonische Omgeving: Lydisch/4th harmonic env, modern, key of C (note 4 = F).mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Vierde Harmonische Omgeving: Lydisch/4th harmonic env, modern, key of C (note 4 = F).mp3"></audio>
         <p>
             Backingtrack Jazz in C
         </p>
-        <audio controls src="Audio/De Vierde Harmonische Omgeving: Lydisch/4th harmonic env, jazz, key of C (note 4 = F).mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Vierde Harmonische Omgeving: Lydisch/4th harmonic env, jazz, key of C (note 4 = F).mp3"></audio>
     </main>
 </body>
 </html>
