--- a/Main index/eartraining/Seven Worlds/De Zesde Harmonische Omgeving: Aeolisch.html
+++ b/Main index/eartraining/Seven Worlds/De Zesde Harmonische Omgeving: Aeolisch.html
@@ -25,24 +25,24 @@
         <p>
             Meditatief (6 .7 1 . 2 . 3 4 . 5 .)
         </p>
-        <audio controls src="Audio/De Zesde Harmonische Omgeving: Aeolisch/ifr_Stn2_16.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Zesde Harmonische Omgeving: Aeolisch/ifr_Stn2_16.mp3"></audio>
         <p>
             Akkoordnoten (6 1 3 5)
         </p>
-        <audio controls src="Audio/De Zesde Harmonische Omgeving: Aeolisch/ifr_Stn2_17.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Zesde Harmonische Omgeving: Aeolisch/ifr_Stn2_17.mp3"></audio>
         <p>
             Gevorderd 
         </p>
-        <audio controls src="Audio/De Zesde Harmonische Omgeving: Aeolisch/ifr_Stn2_18.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Zesde Harmonische Omgeving: Aeolisch/ifr_Stn2_18.mp3"></audio>
         <p>
             Backingtrack in C
 
         </p>
-        <audio controls src="Audio/De Zesde Harmonische Omgeving: Aeolisch/6th harmonic env, modern, key of C (note 6 = A).mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Zesde Harmonische Omgeving: Aeolisch/6th harmonic env, modern, key of C (note 6 = A).mp3"></audio>
         <p>
             Backingtrack Jazz in C
         </p>
-        <audio controls src="Audio/De Zesde Harmonische Omgeving: Aeolisch/6th harmonic env, jazz, key of C (note 6 = A).mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Zesde Harmonische Omgeving: Aeolisch/6th harmonic env, jazz, key of C (note 6 = A).mp3"></audio>
     </main>
 </body>
 </html>
