--- a/Main index/eartraining/Seven Worlds/De Zevende Harmonische Omgeving: Locrisch.html
+++ b/Main index/eartraining/Seven Worlds/De Zevende Harmonische Omgeving: Locrisch.html
@@ -25,24 +25,24 @@
         <p>
             Meditatief (7 1 . 2 . 3 4 . 5 . 6 .)
         </p>
-        <audio controls src="Audio/De Zevende Harmonische Omgeving: Locrisch/ifr_Stn2_19.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Zevende Harmonische Omgeving: Locrisch/ifr_Stn2_19.mp3"></audio>
         <p>
             Akkoordnoten (7 2 4 6)
         </p>
-        <audio controls src="Audio/De Zevende Harmonische Omgeving: Locrisch/ifr_Stn2_20.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Zevende Harmonische Omgeving: Locrisch/ifr_Stn2_20.mp3"></audio>
         <p>
             Gevorderd 
         </p>
-        <audio controls src="Audio/De Zevende Harmonische Omgeving: Locrisch/ifr_Stn2_21.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Zevende Harmonische Omgeving: Locrisch/ifr_Stn2_21.mp3"></audio>
         <p>
             Backingtrack in C
 
         </p>
-        <audio controls src="Audio/De Zevende Harmonische Omgeving: Locrisch/7th harmonic env, modern, key of C (note 7 = B).mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Zevende Harmonische Omgeving: Locrisch/7th harmonic env, modern, key of C (note 7 = B).mp3"></audio>
         <p>
             Backingtrack Jazz in C
         </p>
-        <audio controls src="Audio/De Zevende Harmonische Omgeving: Locrisch/7th harmonic env, jazz, key of C (note 7 = B).mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/De Zevende Harmonische Omgeving: Locrisch/7th harmonic env, jazz, key of C (note 7 = B).mp3"></audio>
     </main>
 </body>
 </html>
