--- a/Main index/eartraining/Tonal map/module 2.html
+++ b/Main index/eartraining/Tonal map/module 2.html
@@ -25,19 +25,19 @@
         <p>
             Les 6.  We zingen nu de noten 1, 3 en 5 
         </p>
-        <audio controls src="Audio/Module 2/IFR_Stn1_6.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Module 2/IFR_Stn1_6.mp3"></audio>
         <p>
             Les 7. We zingen nu de noten 1, 4 en 5  
         </p>
-        <audio controls src="Audio/Module 2/IFR_Stn1_l7.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Module 2/IFR_Stn1_l7.mp3"></audio>
         <p>
             Les 8. We zingen nu de noten 1, 3, 4 en 5 
         </p>
-        <audio controls src="Audio/Module 2/IFR_Stn1_8.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Module 2/IFR_Stn1_8.mp3"></audio>
         <p>
             Les 9. We zingen nu de noten 1,2,3, 4 en 5  
         </p>
-        <audio controls src="Audio/Module 2/IFR_Stn1_9.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Module 2/IFR_Stn1_9.mp3"></audio>
     </main>
 </body>
 </html>
