--- a/Main index/eartraining/Tonal map/module 3.html
+++ b/Main index/eartraining/Tonal map/module 3.html
@@ -25,19 +25,19 @@
         <p>
             Les 10. We zingen nu de noten 1, 3, 5 en 6
         </p>
-        <audio controls src="Audio/Module 3/IFR_Stn1_10.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Module 3/IFR_Stn1_10.mp3"></audio>
         <p>
             Les 11. We zingen nu de noten 1, 2, 5 en 6
         </p>
-        <audio controls src="Audio/Module 3/IFR_Stn1_11.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Module 3/IFR_Stn1_11.mp3"></audio>
         <p>
             Les 12. We zingen nu de noten 1, 2, 3, 5 en  6 
         </p>
-        <audio controls src="Audio/Module 3/IFR_Stn1_12.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Module 3/IFR_Stn1_12.mp3"></audio>
         <p>
             Les 13. We zingen nu de noten 1, 2, 3, 4, 5  en 6 
         </p>
-        <audio controls src="Audio/Module 3/IFR_Stn1_13.mp3"></audio>
+        <audio controls controlslist="nodownload" src="Audio/Module 3/IFR_Stn1_13.mp3"></audio>
 
     </main>
 </body>
