--- a/Main index/eartraining/Tonal map/index.html
+++ b/Main index/eartraining/Tonal map/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tonal Map Index</title>
-    <link rel="stylesheet body" href="/css/Body.css">
-    <link rel="stylesheet header" href="/css/Header.css">
+    <link rel="stylesheet body" href="css/Body.css">
+    <link rel="stylesheet header" href="css/Header.css">
 </head>
 <body>
     <Header>
