--- a/Main index/eartraining/index.html
+++ b/Main index/eartraining/index.html
@@ -13,8 +13,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Ear Training</a></li>
-                <li><a href="/Main index/Blues Training/index.html">Blues Training</a></li>
-                <li><a href="/Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
+                <li><a href="Main index/Blues Training/index.html">Blues Training</a></li>
+                <li><a href="Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
             </ul>
         </nav>
     </Header>
