--- a/Main index/eartraining/index.html
+++ b/Main index/eartraining/index.html
@@ -14,6 +14,7 @@
             <ul>
                 <li><a href="index.html">Ear Training</a></li>
                 <li><a href="Main index/Blues Training/index.html">Blues Training</a></li>
+                <li><a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training2</a></li>
                 <li><a href="Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
             </ul>
         </nav>
