--- a/Main index/eartraining/Tonal map/module 1.html
+++ b/Main index/eartraining/Tonal map/module 1.html
@@ -13,9 +13,9 @@
         <h1>Conservatorium Mechelen</h1>
         <nav>
             <ul>
-                <li><a href="Main index/eartraining/index.html">Ear Training</a></li>
-                <li><a href="Main index/Blues Training/index.html">Blues Training</a></li>
-                <li><a href="Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
+                <li><a href="https://thomastooten.github.io/Main index/eartraining/index.html">Ear Training</a></li>
+                <li><a href="https://thomastooten.github.io/Main index/Blues Training/index.html">Blues Training</a></li>
+                <li><a href="https://thomastooten.github.io/Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
             </ul>
         </nav>
 
