--- a/Main index/eartraining/index.html
+++ b/Main index/eartraining/index.html
@@ -15,7 +15,7 @@
                 <li><a href="index.html">Ear Training</a></li>
                 <li><a href="Main index/Blues Training/index.html">Blues Training</a></li>
                 <li><a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training2</a></li>
-                <li><a href="Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
+                <li><a href="https://thomastooten.github.io/Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
             </ul>
         </nav>
     </Header>
