--- a/Main index/eartraining/Tonal map/module 1.html
+++ b/Main index/eartraining/Tonal map/module 1.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tonal Map Module 1</title>
-    <link rel="stylesheet" href="/css/Header.css">
-    <link rel="stylesheet" href="/css/Body.css">
-
+    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/css/Body.css">
+    <link rel="stylesheet header" href="https://thomastooten.github.io/JPRSite/css/Header.css">
 </head>
 <body>
     <Header>
         <h1>Conservatorium Mechelen</h1>
         <nav>
             <ul>
-                <li><a href="https://thomastooten.github.io/Main index/eartraining/index.html">Ear Training</a></li>
-                <li><a href="https://thomastooten.github.io/Main index/Blues Training/index.html">Blues Training</a></li>
-                <li><a href="https://thomastooten.github.io/Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
+                <li><a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a></li>
+                <li><a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a></li>
+                <li><a href="https://thomastooten.github.io/JPRSite/Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
             </ul>
         </nav>
 
