--- a/Main index/eartraining/index.html
+++ b/Main index/eartraining/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ear Training</title>
-    <link rel="stylesheet body" href="css/Body.css">
-    <link rel="stylesheet header" href="css/Header.css">
+    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/css/Body.css">
+    <link rel="stylesheet header" href="https://thomastooten.github.io/JPRSite/css/Header.css">
 </head>
 <body>
     <Header>
@@ -15,7 +15,7 @@
                 <li><a href="index.html">Ear Training</a></li>
                 <li><a href="Main index/Blues Training/index.html">Blues Training</a></li>
                 <li><a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training2</a></li>
-                <li><a href="https://thomastooten.github.io/Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
+                <li><a href="https://thomastooten.github.io/JPRSite/Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
             </ul>
         </nav>
     </Header>
