--- a/Main index/eartraining/index.html
+++ b/Main index/eartraining/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ear Training</title>
-    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/css/Body.css">
-    <link rel="stylesheet header" href="https://thomastooten.github.io/JPRSite/css/Header.css">
+    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/index.css">
+    <link rel="stylesheet" href="/index.css">
+
 </head>
 <body>
     <Header>
