--- a/Main index/Blues Training/Lessen 14 tem 18.html
+++ b/Main index/Blues Training/Lessen 14 tem 18.html
@@ -10,15 +10,12 @@
 </head>
 <body>
     <Header>
-        <h1>Conservatorium Mechelen</h1>
+        <h1>Blues Training</h1>
         <nav>
-            <ul>
-                <li><a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a></li>
-                <li><a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a></li>
-                <li><a href="https://thomastooten.github.io/JPRSite/Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
-            </ul>
+                <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
+                <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
+                <a href="https://thomastooten.github.io/JPRSite/https://integerbook.herokuapp.com">Leadsheets IRF</a>
         </nav>
-
     </Header>
     <main>
         <h2>Lessen 14 t.e.m. 18</h2>
