--- a/Main index/eartraining/Seven Worlds/index.html
+++ b/Main index/eartraining/Seven Worlds/index.html
@@ -9,13 +9,11 @@
 </head>
 <body>
     <Header>
-        <h1>Conservatorium Mechelen</h1>
+        <h1>Seven Worlds</h1>
         <nav>
-            <ul>
-                <li><a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a></li>
-                <li><a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a></li>
-                <li><a href="https://thomastooten.github.io/JPRSite/Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
-            </ul>
+                <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
+                <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
+                <a href="https://thomastooten.github.io/JPRSite/https://integerbook.herokuapp.com">Leadsheets IRF</a>
         </nav>
     </Header>
     <main>
