--- a/Main index/eartraining/Tonal map/module 1.html
+++ b/Main index/eartraining/Tonal map/module 1.html
@@ -4,44 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tonal Map Module 1</title>
-    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/css/Body.css">
-    <link rel="stylesheet header" href="https://thomastooten.github.io/JPRSite/css/Header.css">
+    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/index.css">
+    <script src="https://thomastooten.github.io/JPRSite/index.js"></script>
 </head>
 <body>
     <Header>
-        <h1>Conservatorium Mechelen</h1>
-        <nav>
-            <ul>
-                <li><a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a></li>
-                <li><a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a></li>
-                <li><a href="https://thomastooten.github.io/JPRSite/Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
-            </ul>
-        </nav>
-
-    </Header>
+        <Header>
+            <h1>EAR TRAINING</h1>
+            <nav>
+                    <a href="Main index/eartraining/index.html">Ear Training</a>
+                    <a href="Main index/Blues Training/index.html">Blues Training</a>
+                    <a href="https://integerbook.herokuapp.com">Leadsheets IRF</a>
+            </nav>
+        </Header>
     <main>
-        <h2>Module 1</h2>
-        <p>
-            Les 1. Beheers de noten 1, 2, 3: zing de eerste 3 noten na van de tonale kaart. 
-        </p>
-        <audio controls controlslist="nodownload" src="Audio/Module 1/IFR_Stn_1_1.mp3"></audio>
-        <p>
-            Les 2. Beheers de noten 1, 2, 3: nu maken we een melodische verbinding. Beginner
+        <section id='steezy'>
 
-        </p>
-        <audio controls controlslist="nodownload" src="Audio/Module 1/IFR_Stn1_2.mp3"></audio>
-        <p>
-            Les 3. Beheers de noten 1, 2, 3: we maken  een melodische verbinding. Gevorderd
-        </p>
-        <audio controls controlslist="nodownload" src="Audio/Module 1/IFR_Stn1_3.mp3"></audio>
-        <p>
-            Les 4. Beheers de noten 1, 3, 4: we maken een melodische verbinding.
-        </p>
-        <audio controls controlslist="nodownload" src="Audio/Module 1/IFR_Stn1_4.mp3"></audio>
-        <p>
-            Les 5. Beheers de noten 1, 2, 3 en 4: we  maken een melodische verbinding.
-        </p>
-        <audio controls controlslist="nodownload" src="Audio/Module 1/IFR_Stn1_5.mp3"></audio>
+            <h2>Module 1</h2>
+        </section>
+        <section id= steezy>
+
+            <p>
+                Les 1. Beheers de noten 1, 2, 3: zing de eerste 3 noten na van de tonale kaart. 
+            </p>
+            <audio controls controlslist="nodownload" src="Audio/Module 1/IFR_Stn_1_1.mp3"></audio>
+        </section>
+            <p>
+                Les 2. Beheers de noten 1, 2, 3: nu maken we een melodische verbinding. Beginner
+                
+            </p>
+            <audio controls controlslist="nodownload" src="Audio/Module 1/IFR_Stn1_2.mp3"></audio>
+            <p>
+                Les 3. Beheers de noten 1, 2, 3: we maken  een melodische verbinding. Gevorderd
+            </p>
+            <audio controls controlslist="nodownload" src="Audio/Module 1/IFR_Stn1_3.mp3"></audio>
+            <p>
+                Les 4. Beheers de noten 1, 3, 4: we maken een melodische verbinding.
+            </p>
+            <audio controls controlslist="nodownload" src="Audio/Module 1/IFR_Stn1_4.mp3"></audio>
+            <p>
+                Les 5. Beheers de noten 1, 2, 3 en 4: we  maken een melodische verbinding.
+            </p>
+            <audio controls controlslist="nodownload" src="Audio/Module 1/IFR_Stn1_5.mp3"></audio>
     </main>
 </body>
 </html>
