--- a/Main index/eartraining/index.html
+++ b/Main index/eartraining/index.html
@@ -5,23 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ear Training</title>
     <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/index.css">
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="https://thomastooten.github.io/JPRSite/index.js">
 
 </head>
 <body>
     <Header>
-        <h1>Conservatorium Mechelen</h1>
+        <h1>EAR TRAINING</h1>
+        <h1>Home</h1>
         <nav>
-            <ul>
-                <li><a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a></li>
-                <li><a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a></li>
-                <li><a href="https://thomastooten.github.io/JPRSite/Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
-            </ul>
+                <a href="Main index/eartraining/index.html">Ear Training</a>
+                <a href="Main index/Blues Training/index.html">Blues Training</a>
+                <a href="https://integerbook.herokuapp.com">Leadsheets IRF</a>
         </nav>
     </Header>
     <main>
-        <h2>Ear Training</h2>
-        <h3>Sing The Numbers</h3>
+        <h2>Sing The Numbers</h2>
         <nav>
             <ul>
                 <li><a href="Tonal map/index.html"> Tonal map</a></li>
