--- a/Main index/eartraining/Seven Worlds/De Vijfde Harmonische Omgeving: Mixolydisch.html
+++ b/Main index/eartraining/Seven Worlds/De Vijfde Harmonische Omgeving: Mixolydisch.html
@@ -4,21 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De Vijfde Harmonische Omgeving: Mixolydisch</title>
-    <link rel="stylesheet" href="/css/Header.css">
-    <link rel="stylesheet" href="/css/Body.css">
+    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/index.css">
+    <script src="https://thomastooten.github.io/JPRSite/index.js"></script>
 
 </head>
 <body>
     <Header>
-        <h1>Conservatorium Mechelen</h1>
+        <h1>Seven Worlds</h1>
         <nav>
-            <ul>
-                <li><a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a></li>
-                <li><a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a></li>
-                <li><a href="https://thomastooten.github.io/JPRSite/Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
-            </ul>
+                <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
+                <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
+                <a href="https://integerbook.herokuapp.com">Leadsheets IRF</a>
         </nav>
-
     </Header>
     <main>
         <h2>De Vijfde Harmonische Omgeving: Mixolydisch</h2>
