--- a/Main index/eartraining/Tonal map/module 1.html
+++ b/Main index/eartraining/Tonal map/module 1.html
@@ -9,14 +9,13 @@
 </head>
 <body>
     <Header>
-        <Header>
-            <h1>EAR TRAINING</h1>
-            <nav>
-                    <a href="Main index/eartraining/index.html">Ear Training</a>
-                    <a href="Main index/Blues Training/index.html">Blues Training</a>
-                    <a href="https://integerbook.herokuapp.com">Leadsheets IRF</a>
-            </nav>
-        </Header>
+        <h1>TONAL MAP</h1>
+        <nav>
+                <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
+                <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
+                <a href="https://integerbook.herokuapp.com">Leadsheets IRF</a>
+        </nav>
+    </Header>
     <main>
         <section id='steezy'>
 
