--- a/Main index/eartraining/Seven Worlds/index.html
+++ b/Main index/eartraining/Seven Worlds/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seven Worlds Index</title>
-    <link rel="stylesheet body" href="/css/Body.css">
-    <link rel="stylesheet header" href="/css/Header.css">
+    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/index.css">
+    <script src="https://thomastooten.github.io/JPRSite/index.js"></script>
 </head>
 <body>
     <Header>
@@ -13,7 +13,7 @@
         <nav>
                 <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
                 <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
-                <a href="https://thomastooten.github.io/JPRSite/https://integerbook.herokuapp.com">Leadsheets IRF</a>
+                <a href="https://integerbook.herokuapp.com">Leadsheets IRF</a>
         </nav>
     </Header>
     <main>
