--- a/Main index/eartraining/Tonal map/index.html
+++ b/Main index/eartraining/Tonal map/index.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tonal Map Index</title>
-    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/css/Body.css">
-    <link rel="stylesheet header" href="https://thomastooten.github.io/JPRSite/css/Header.css">
+    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/index.css">
+    <script src="https://thomastooten.github.io/JPRSite/index.js"></script>
 </head>
 <body>
     <Header>
-        <h1>Conservatorium Mechelen</h1>
+        <h1>TONAL MAP</h1>
         <nav>
-            <ul>
-                <li><a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a></li>
-                <li><a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a></li>
-                <li><a href="https://thomastooten.github.io/JPRSite/Main index/Leadsheets/index.html">Leadsheets IRF</a></li>
-            </ul>
+                <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
+                <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
+                <a href="https://integerbook.herokuapp.com">Leadsheets IRF</a>
         </nav>
     </Header>
     <main>
