--- a/Main index/eartraining/Tonal map/module 2.html
+++ b/Main index/eartraining/Tonal map/module 2.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tonal Map Module 2</title>
-    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/css/Body.css">
-    <link rel="stylesheet header" href="https://thomastooten.github.io/JPRSite/css/Header.css">
+    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/index.css">
+    <script src="https://thomastooten.github.io/JPRSite/index.js"></script>
 
 </head>
 <body>
     <Header>
-        <h1>EAR TRAINING</h1>
+        <h1>TONAL MAP/h1>
         <nav>
-                <a href="Main index/eartraining/index.html">Ear Training</a>
-                <a href="Main index/Blues Training/index.html">Blues Training</a>
+                <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
+                <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
                 <a href="https://integerbook.herokuapp.com">Leadsheets IRF</a>
         </nav>
     </Header>
