--- a/Main index/eartraining/index.html
+++ b/Main index/eartraining/index.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ear Training</title>
     <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/index.css">
-    <link rel="stylesheet" href="https://thomastooten.github.io/JPRSite/index.js">
+    <script src="https://thomastooten.github.io/JPRSite/index.js"></script>
 
 </head>
 <body>
     <Header>
         <h1>EAR TRAINING</h1>
-        <h1>Home</h1>
         <nav>
-                <a href="Main index/eartraining/index.html">Ear Training</a>
-                <a href="Main index/Blues Training/index.html">Blues Training</a>
+                <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
+                <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
                 <a href="https://integerbook.herokuapp.com">Leadsheets IRF</a>
         </nav>
     </Header>
